--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,5 +23,6 @@ jobs:
       - name: Install dependencies
         run: uv pip install .
 
-      - name: Run flake8
-        run: uv run flake8 page_analyzer
+      - name: Run ruff
+        run: uv run ruff page_analyzer
+
