pyproject.toml and uv.lock update2

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,6 @@ dependencies = [
     "gunicorn>=23.0.0",
     "python-dotenv>=1.1.1",
     "ruff>=0.12.4",
-    "psycopg2-binary>=2.9.10"
+    "psycopg2-binary>=2.9.10",
+    "validators>=0.35.0",
 ]
