--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,4 +12,5 @@ dependencies = [
     "psycopg2-binary>=2.9.10",
     "validators>=0.35.0",
     "requests>=2.32.4",
+    "beautifulsoup4>=4.13.4",
 ]
