--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -41,6 +41,6 @@ jobs:
             -Dsonar.projectKey=olyapka84_python-project-83 \
             -Dsonar.organization=olyapka84 \
             -Dsonar.python.version=3.10 \
-            -Dsonar.sources=code \
+            -Dsonar.sources=page_analyzer \
             -Dsonar.host.url=https://sonarcloud.io \
             -Dsonar.login=${{ secrets.SONAR_TOKEN }}
